kubernetes/client.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: client
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  minReadySeconds: 50
  template:
    metadata:
      namespace: prod
      labels:
        app: client
        system: node
    spec:
      containers:
      - name: client
        image: descartae/webportal-client:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3900
---
kind: Service
apiVersion: v1
metadata:
  name: client-ingress
  namespace: prod
  labels:
    app: client
    system: node
spec:
  type: NodePort
  ports:
  - name: client
    port: 80
    protocol: TCP
    targetPort: 3900
  selector:
    app: client
