kubernetes/mongo.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mongo
  namespace: prod
spec:
  replicas: 1
  template:
    metadata:
      namespace: prod
      labels:
        app: mongo
        system: mongo
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongo
          image: mongo
          command:
            - mongod
            - "--bind_ip_all"
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
      volumes:
        - name: mongo-persistent-storage
          persistentVolumeClaim:
            claimName: mongo-persistent-storage-claim
---
kind: Service
apiVersion: v1
metadata:
  name: mongo
  namespace: prod
  labels:
    app: mongo
spec:
  type: ClusterIP
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongo
