kubernetes/server.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: server
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  minReadySeconds: 40
  template:
    metadata:
      namespace: prod
      labels:
        app: server
        system: node
    spec:
      containers:
      - name: server
        image: descartae/webportal-server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3901
---
kind: Service
apiVersion: v1
metadata:
  name: server-ingress
  namespace: prod
  labels:
    app: server
    system: node
spec:
  type: NodePort
  ports:
  - name: server
    port: 80
    protocol: TCP
    targetPort: 3901
  selector:
    app: server
